--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
              <div class="contact">
-                <a href="tel:004479221234567">0044 792 212 3456</a>
+                <a href="tel:+2348035582849">+2348035582849</a>
              </div>
         </nav>
         <div class="header-content">
